[package]
name = "lanta"
version = "0.1.0"
authors = ["Michael Killough <michaeljkillough@gmail.com>"]

[[bin]]
name = "lanta"
doc = false

[dependencies]
error-chain = "0.11"
fern = "0.3"
libc = "0.2"
log = "0.3"
log-panics = { version = "1.2", features = ["with-backtrace"] }
time = "0.1"
x11 = "2.12"
xcb = "0.8"
xcb-util = { version = "0.2", features = ["ewmh", "icccm", "keysyms"] }
xdg = "2.1"
